--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,6 +12,7 @@
             <a href="{{ url_for('index') }}">Home</a>
             <a href="{{ url_for('login') }}">Login</a>
             <a href="{{ url_for('unicorns') }}">Unicorns</a>
+            <a href="{{ url_for('ron_swanson_quotes') }}">Ron Swanson</a>
         </div>
         <hr>
         {% with messages = get_flashed_messages() %}
